--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,7 +1,8 @@
 name: Go
 
 on:
-  push: {tags:  ['v*'] }
+  push:
+    branches: [ master ]
   
 jobs:
   build_release:
@@ -21,6 +22,6 @@ jobs:
         CGO_ENABLED=0 GOOS=windows GOARCH=amd64 go build -o MagesTools_win.exe .
     - uses: ncipollo/release-action@v1
       with:
-        artifacts: "MagesTools_*"
+        artifacts: "MagesTools_linux,MagesTools_mac,MagesTools_win.exe"
         bodyFile: ""
-        token: ${{ secrets.GITHUB_TOKEN }}
+        token: ${{ secrets.RELEASE_GITHUB_TOKEN }}
