[FIX] 修复表达式结束判断; 修复无文本的脚本解析问题; 修复windows下导出文件夹无写入问题

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,4 +25,4 @@ jobs:
       with:
         artifacts: "MagesTools_linux,MagesTools_mac,MagesTools_win.exe"
         bodyFile: ""
-        token: ${{ secrets.RELEASE_GITHUB_TOKEN }}
+        token: ${{ secrets.GITHUB_TOKEN }}
